disconnect sources before removing a row (when the row limit is exceeded) now it no longer causes a failed assertion. patch by John Varouhakis

BUG: 159343

svn path=/trunk/KDE/kdebase/workspace/; revision=786308